--- a/org.jacoco.doc/docroot/doc/resources/doc.css
+++ b/org.jacoco.doc/docroot/doc/resources/doc.css
@@ -57,9 +57,17 @@ h1 {
 
 .breadcrumb {
   border:#d6d3ce 1px solid;
-  padding:2px 4px 2px 4px;
+  padding:6px 4px 4px 4px;
+  border-radius:3px;
 }
 
+.breadcrumb .info {
+  float:right;
+}
+
+.breadcrumb .info a {
+  margin-left:8px;
+}
 
 .el_report {
   padding-left:18px;
@@ -119,17 +127,19 @@ h1 {
 
 pre.source {
   border:#d6d3ce 1px solid;
+  border-radius:3px;
   font-family:monospace;
 }
 
 pre.source ol {
   margin-bottom: 0px;
   margin-top: 0px;
+  margin-left: 8px
 }
 
 pre.source li {
   border-left: 1px solid #D6D3CE;
-  color: #A0A0A0;
+  color: #cccccc;
   padding-left: 0px;
 }
 
@@ -138,17 +148,49 @@ pre.source span.fc {
 }
 
 pre.source span.nc {
-  background-color:#ffcccc;
+  background-color:#ffaaaa;
 }
 
 pre.source span.pc {
   background-color:#ffffcc;
 }
 
+pre.source span.bfc {
+  background-image: url(branchfc.gif);
+  background-repeat: no-repeat;
+  background-position: 2px center;
+}
+
+pre.source span.bfc:hover {
+  background-color:#80ff80;
+}
+
+pre.source span.bnc {
+  background-image: url(branchnc.gif);
+  background-repeat: no-repeat;
+  background-position: 2px center;
+}
+
+pre.source span.bnc:hover {
+  background-color:#ff8080;
+}
+
+pre.source span.bpc {
+  background-image: url(branchpc.gif);
+  background-repeat: no-repeat;
+  background-position: 2px center;
+}
+
+pre.source span.bpc:hover {
+  background-color:#ffff80;
+}
 
 table.coverage {
   empty-cells:show;
-  border-collapse:collapse; 
+  border-spacing:0;
+  border-collapse:separate; 
+  border-radius:3px;
+  border:#c0c0c0 1px solid;
 }
 
 table.coverage thead {
@@ -157,61 +199,90 @@ table.coverage thead {
 
 table.coverage thead td {
   white-space:nowrap;
-  padding:2px 8px 0px 8px;
-  border-bottom:#b0b0b0 1px solid;
+  padding:4px 14px 2px 6px;
+}
+
+table.coverage thead td.bar {
+  border-left:#cccccc 1px solid;
 }
 
 table.coverage thead td.ctr1 {
   text-align:right;
-  padding-right:4px;
   border-left:#cccccc 1px solid;
 }
 
 table.coverage thead td.ctr2 {
   text-align:right;
-  padding-left:4px;
+  padding-left:2px;
+}
+
+table.coverage thead td.sortable {
+  cursor:pointer;
+  background-image:url(sort.gif);
+  background-position:right center;
+  background-repeat:no-repeat;
+}
+
+table.coverage thead td.up {
+  background-image:url(up.gif);
+}
+
+table.coverage thead td.down {
+  background-image:url(down.gif);
 }
 
 table.coverage tbody td {
-  vertical-align:top;
-  padding:2px 8px 2px 8px;
-  border-bottom:#d6d3ce 1px solid;
+  white-space:nowrap;
+  padding:4px 6px 2px 6px;
+  border-top:#c0c0c0 1px solid;
 }
 
 table.coverage tbody tr:hover { 
   background: #f0f0d0 !important;
 }
 
+table.coverage tbody td.bar {
+  border-left:#e8e8e8 1px solid;
+}
+
 table.coverage tbody td.ctr1 {
   text-align:right;
-  padding-right:4px;
+  padding-right:14px;
   border-left:#e8e8e8 1px solid;
 }
 
 table.coverage tbody td.ctr2 {
   text-align:right;
-  padding-left:4px;
+  padding-right:14px;
+  padding-left:2px;
 }
 
 table.coverage tfoot td {
-  padding:2px 8px 2px 8px;
+  white-space:nowrap;
+  padding:4px 6px 2px 6px;
+  border-top:#c0c0c0 1px solid;  
+}
+
+table.coverage tfoot td.bar {
+  border-left:#e8e8e8 1px solid;
 }
 
 table.coverage tfoot td.ctr1 {
   text-align:right;
-  padding-right:4px;
+  padding-right:14px;
   border-left:#e8e8e8 1px solid;
 }
 
 table.coverage tfoot td.ctr2 {
   text-align:right;
-  padding-left:4px;
+  padding-right:14px;
+  padding-left:2px;
 }
 
 .footer {
   margin-top:20px;
   border-top:#d6d3ce 1px solid;
-  padding-top:2px;
+  padding-top:4px;
   font-size:8pt;
   color:#a0a0a0;
 }
